# nexaroute

./: .gitignore  README.md  main.py  pyproject.toml
docs/: README.md
docs/architecture/: overview.md  system-design.md
docs/concepts/: core-concepts.md  value-for-business.md
docs/faq/: faq.md
docs/getting-started/: first-handler.md  installation.md  quickstart.md
docs/guides/: bootstrap-simple.md  handler-patterns.md  neonize-integration.md
docs/operations/: production-checklist.md  troubleshooting.md
docs/reference/: domain-models.md  inbound-event.md  ports-and-adapters.md  queue-port.md
docs/superpowers/plans/: 2026-04-07-nexaroute-mvp-foundation.md
docs/superpowers/specs/: 2026-04-07-event-orchestration-framework-design.md
src/nexaroute/adapters/: __init__.py
src/nexaroute/adapters/in_memory/: __init__.py  cache.py  execution.py  queue.py  state_store.py
src/nexaroute/adapters/logging/: __init__.py  rich_logger.py
src/nexaroute/application/: __init__.py  bootstrap.py  handlers.py  orchestrator.py  registry.py  runtime.py
src/nexaroute/core/: __init__.py
src/nexaroute/core/domain/: __init__.py  commands.py  context.py  events.py  jobs.py  results.py
src/nexaroute/core/ports/: __init__.py  actions.py  cache.py  execution.py  logger.py  queue.py  state_store.py  triggers.py
tests/integration/: test_simple_runtime.py
tests/unit/: test_package_import.py
tests/unit/adapters/in_memory/: test_execution.py  test_queue_and_storage.py
tests/unit/application/: test_orchestrator.py  test_registry.py
tests/unit/core/domain/: test_models.py
(+1 files in other folders)
